--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gget",
+  "name": "gget-cli",
   "version": "1.0.0",
   "description": "CLI tools to download template defines in GitHub",
   "main": "index.js",
@@ -14,6 +14,11 @@
     "Get",
     "gget"
   ],
+  "homepage": "https://github.com/mahasak/gget-cli",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mahasak/gget-cli"
+  },
   "author": "Mahasak Pijittum",
   "license": "ISC",
   "dependencies": {
