--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "gget": "./index.js"
+    "gget": "./index.js",
+    "ggignore": "./get-ignore.js"
   },
   "keywords": [
     "Git",
@@ -26,6 +27,7 @@
     "commander": "^2.20.0",
     "figlet": "^1.2.3",
     "fs-extra": "^8.1.0",
+    "github-content": "^1.0.1",
     "is-url": "^1.2.4",
     "ora": "^3.4.0",
     "simple-git": "^1.121.0",
